--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
     "max-len": ["error", { "code": 200 }],
     "no-param-reassign": "off",
     "no-else-return": "off",
-    "no-lonely-if": "off"
+    "no-lonely-if": "off",
+    "no-shadow": "off"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
