--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^9.1.3",
     "core-js": "^3.32.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
@@ -35,6 +36,10 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "webpack": "^5.88.2",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6"
   }
