--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,7 +6,7 @@ branches:
   only:
     - master  # ветка git
 
-cache: node_modules  # кеширование
+cache: none  # кеширование
 
 install:
   - npm install  # команда установки зависимостей
