--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ cache: none  # кеширование
 install:
   - npm install  # команда установки зависимостей
 
-build: on  # отключаем встроенную в appveyor систему сборки
+build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
   - npm run build   # команда сборки
